@@ -1440,6 +1440,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #6095: Make directory argument to os.listdir optional.
+
 - Issue #9277: Fix bug in struct.pack for bools in standard mode
   (e.g., struct.pack('>?')):  if conversion to bool raised an exception
   then that exception wasn't properly propagated on machines where
